--- a/index.html
+++ b/index.html
@@ -21,18 +21,21 @@
             </div>
 
             <div class="form-group">
-                <label for="produto">Nome do Produto:</label>
-                <input type="text" id="produto" required placeholder="Digite ou selecione o produto" list="listaProdutos" autocomplete="off">
-                <datalist id="listaProdutos"></datalist>
+                <label for="data">Data da Entrega:</label>
+                <input type="date" id="data" required>
             </div>
 
-            <div class="form-group">
-                <label for="quantidade">Quantidade (kg):</label>
-                <input type="number" id="quantidade" required min="0.1" step="0.1" placeholder="Ex: 5">
+            <div class="produtos-header">
+                <div class="header-produto">PRODUTO</div>
+                <div class="header-qtd">QTD. (kg)</div>
+            </div>
+
+            <div id="listaProdutos" class="lista-produtos">
+                <p class="carregando">Carregando produtos...</p>
             </div>
 
             <button type="submit" class="btn-submit">
-                📦 Registrar Pedido
+                📦 Registrar Pedidos
             </button>
         </form>
     </div>
