--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="logo">🌾</div>
-        <h1>Cooperativa Familiar</h1>
+        <h1>Cooperativa CLAF</h5>
         <p class="subtitle">Registro de Entrega de Produtos</p>
 
         <div id="mensagem" class="mensagem oculto"></div>
