--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cooperativa - Registro de Pedidos</title>
+    <title>Cooperativa CLAF - Registro de Pedidos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="logo">🌾</div>
-        <h1>Cooperativa CLAF</h5>
+        <h1>Cooperativa CLAF</h1>
         <p class="subtitle">Registro de Entrega de Produtos</p>
 
         <div id="mensagem" class="mensagem oculto"></div>
