--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <button type="submit" class="btn-submit">
-                📦 Registrar Pedidos
+                📦 Registrar Salvar e imprimir Pedidos
             </button>
         </form>
     </div>
