--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <div class="container">
         <div class="logo">🌾</div>
-        <h5>COOPERATIVA CLAF</h5>
+     <div class="header-cooperativa">
+    <img src="Cópia de CLAF.png" alt="Logo CLAF" class="logo-img">
+    <h1 class="titulo-grande">COOPERATIVA CLAF</h1>
+</div>
         <p class="subtitle">Registro de Entrega de Produtos</p>
 
         <div id="mensagem" class="mensagem oculto"></div>
