--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="logo">🌾</div>
      <div class="header-cooperativa">
-    <img src="Cópia de CLAF.png" alt="Logo CLAF" class="logo-img">
+    <img src="Cópia de CLAF.png" alt="" class="logo-img">
     <h1 class="titulo-grande">COOPERATIVA CLAF</h1>
 </div>
         <p class="subtitle">Registro de Entrega de Produtos</p>
