--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo">🌾</div>
+       <div style="text-align: center; margin-bottom: 10px;">
+    <img src="Cópia de CLAF.png" alt="Logo CLAF" style="max-width: 150px; height: auto;">
+</div>
      <div class="header-cooperativa">
     <img src="Cópia de CLAF.png" alt="" class="logo-img">
     <h1 class="titulo-grande">COOPERATIVA CLAF</h1>
