--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <div class="container">
-       <div style="text-align: center; margin-bottom: 10px;">
-    <img src="Cópia de CLAF.png" alt="Logo CLAF" style="max-width: 150px; height: auto;">
-</div>
-     <div class="header-cooperativa">
+      <div style="text-align: center; margin-bottom: 10px;">
+            <img src="Cópia de CLAF.png" alt="Logo CLAF" style="max-width: 150px; height: auto;">
+        </div>
+        
+        <h1 style="color: #1b5e20; font-size: 35px; text-align: center; font-weight: bold; text-transform: uppercase; margin: 0;">
+            COOPERATIVA CLAF
+        </h1>
     <img src="Cópia de CLAF.png" alt="" class="logo-img">
     <h1 class="titulo-grande">COOPERATIVA CLAF</h1>
 </div>
