--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <div class="container">
-      <div style="text-align: center; margin-bottom: 10px;">
-            <img src="Cópia de CLAF.png" alt="Logo CLAF" style="max-width: 150px; height: auto;">
-        </div>
+      <div style="text-align: center; margin-bottom: 5px;">
+            <img src="Cópia de CLAF.png" alt="Logo CLAF" style="width: 150px; height: auto; display: block; margin: 0 auto;">
+        </h1>
         
-        <h1 style="color: #1b5e20; font-size: 35px; text-align: center; font-weight: bold; text-transform: uppercase; margin: 0;">
+        <h1 style="color: #1b5e20; font-size: 32px; text-align: center; font-weight: bold; text-transform: uppercase; margin-top: 10px;">
             COOPERATIVA CLAF
+        </h1>
         </h1>
     <img src="Cópia de CLAF.png" alt="" class="logo-img">
     <h1 class="titulo-grande">COOPERATIVA CLAF</h1>
