--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-      <div style="text-align: center; margin-bottom: 5px;">
-            <img src="Cópia de CLAF.png" alt="Logo CLAF" style="width: 150px; height: auto; display: block; margin: 0 auto;">
-        </h1>
-        
-        <h1 style="color: #1b5e20; font-size: 32px; text-align: center; font-weight: bold; text-transform: uppercase; margin-top: 10px;">
-            COOPERATIVA CLAF
+    <div style="text-align: center; margin-bottom: 20px;">
+            <img src="Cópia de CLAF.png" alt="Logo CLAF" style="width: 180px; height: auto; margin-bottom: 10px;">
+            <h1 style="color: #1b5e20; font-size: 40px; font-weight: bold; text-transform: uppercase; margin: 0;">
+                COOPERATIVA CLAF
+            </h1>
+            <p style="color: #4caf50; font-weight: bold; margin-top: 5px;">Registro de Entrega de Produtos</p>
+        </div>
         </h1>
         </h1>
     <img src="Cópia de CLAF.png" alt="" class="logo-img">
