--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">🌾</div>
-            <h1>Cooperativa Familiar</h1>
+            <h1>COOPERATIVA CLAF</h1>
             <p class="subtitle">Registro de Entrega de Produtos</p>
         </div>
 
