--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h5>COOPERATIVA CLAF</h1>
+            <div class="logo">🌾</div>
+            <h1>COOPERATIVA CLAF</h1>
             <p class="subtitle">Registro de Entrega de Produtos</p>
         </div>
 
