--- a/index.html
+++ b/index.html
@@ -8,48 +8,33 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <div class="logo">🌾</div>
-            <h1>COOPERATIVA CLAF</h1>
-            <p class="subtitle">Registro de Entrega de Produtos</p>
-        </div>
+        <div class="logo">🌾</div>
+        <h1>Cooperativa Familiar</h1>
+        <p class="subtitle">Registro de Entrega de Produtos</p>
 
-        <div class="form-card">
-            <form id="pedido-form">
-                <div class="form-group">
-                    <label for="produtor">Nome do Produtor:</label>
-                    <input type="text" id="produtor" placeholder="Digite o nome do produtor" required>
-                </div>
+        <div id="mensagem" class="mensagem oculto"></div>
 
-                <div class="form-group">
-                    <label for="produto">Nome do Produto:</label>
-                    <input type="text" id="produto" placeholder="Digite o nome do produto" required autocomplete="off">
-                    <div id="produto-list" class="produto-list"></div>
-                </div>
+        <form id="formPedido">
+            <div class="form-group">
+                <label for="produtor">Nome do Produtor:</label>
+                <input type="text" id="produtor" required placeholder="Digite seu nome">
+            </div>
 
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="quantidade">Quantidade:</label>
-                        <input type="number" id="quantidade" placeholder="0" step="0.01" required>
-                    </div>
+            <div class="form-group">
+                <label for="produto">Nome do Produto:</label>
+                <input type="text" id="produto" required placeholder="Digite ou selecione o produto" list="listaProdutos" autocomplete="off">
+                <datalist id="listaProdutos"></datalist>
+            </div>
 
-                    <div class="form-group">
-                        <label for="unidade">Unidade:</label>
-                        <select id="unidade" required>
-                            <option value="kg">Kg</option>
-                            <option value="unidade">Unidade</option>
-                            <option value="dúzia">Dúzia</option>
-                            <option value="maço">Maço</option>
-                            <option value="caixa">Caixa</option>
-                        </select>
-                    </div>
-                </div>
+            <div class="form-group">
+                <label for="quantidade">Quantidade (kg):</label>
+                <input type="number" id="quantidade" required min="0.1" step="0.1" placeholder="Ex: 5">
+            </div>
 
-                <button type="submit" class="btn-submit">
-                    📦 Registrar Pedido
-                </button>
-            </form>
-        </div>
+            <button type="submit" class="btn-submit">
+                📦 Registrar Pedido
+            </button>
+        </form>
     </div>
 
     <script src="script.js"></script>
