--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo">🌾</div>
+        <div class="logo">
+    <img src="CLAF.png" alt="Logo Cooperativa CLAF">
+</div>
         <h1>COOPERATIVA CLAF</h1>
         <p class="subtitle">Registro de Entrega de Produtos</p>
 
