--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
 
             <button type="submit" class="btn-submit">
-                📦 Registrar Pedidos
+                📦 Registrar Salvar e Imprimir Pedidos
             </button>
         </form>
     </div>
