--- a/index.html
+++ b/index.html
@@ -43,5 +43,8 @@
     </div>
 
     <script src="script.js"></script>
+   <!-- RECIBO PARA IMPRESSÃO -->
+<div id="recibo" style="display:none;"></div>
+
 </body>
 </html>
