--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 
     <script src="script.js"></script>
    <!-- RECIBO PARA IMPRESSÃO -->
-<div id="recibo" style="display:none;"></div>
+<div id="recibo" style="display:none;">
+    <button onclick="window.print()">🖨️ IMPRIMIR</button>
+</div>
 
 </body>
 </html>
