--- a/index.html
+++ b/index.html
@@ -43,6 +43,24 @@
             </button>
         </form>
     </div>
+<!-- RECIBO PARA IMPRESSÃO / PDF -->
+<div id="recibo" style="display:none; width:76mm; font-family: monospace;">
+    <h2 style="text-align:center;">COOPERATIVA CLAF</h2>
+    <p style="text-align:center;">RECIBO DE ENTREGA</p>
+    <hr>
+
+    <p><strong>Produtor:</strong> <span id="reciboProdutor"></span></p>
+    <p><strong>Data:</strong> <span id="reciboData"></span></p>
+
+    <hr>
+
+    <div id="reciboItens"></div>
+
+    <hr>
+    <p style="text-align:center; font-size:10px;">
+        Cooperativa CLAF agradece!
+    </p>
+</div>
 
     <script src="script.js"></script>
    <!-- RECIBO PARA IMPRESSÃO -->
