--- a/index.html
+++ b/index.html
@@ -60,6 +60,42 @@
         Cooperativa CLAF agradece!
     </p>
 </div>
+<!-- CUPOM PARA PDF (INVISÍVEL) -->
+<div id="pdf-cupom" style="
+    position: fixed;
+    left: -9999px;
+    top: 0;
+    width: 80mm;
+    background: white;
+    padding: 6mm;
+    font-family: monospace;
+">
+    <div style="text-align:center; margin-bottom:6px;">
+        <strong>COOPERATIVA CLAF</strong><br>
+        <small>RECIBO DE ENTREGA</small>
+    </div>
+
+    <div style="border-top:1px dashed #000; margin:6px 0;"></div>
+
+    <div><strong>PRODUTOR:</strong> <span id="pdfProdutor"></span></div>
+    <div><strong>DATA:</strong> <span id="pdfData"></span></div>
+
+    <div style="border-top:1px solid #000; margin:6px 0;"></div>
+
+    <div style="display:flex; justify-content:space-between; font-weight:bold;">
+        <span>PRODUTO</span>
+        <span>QTD</span>
+    </div>
+
+    <div id="pdfItens" style="margin-top:4px;"></div>
+
+    <div style="border-top:1px dashed #000; margin:8px 0;"></div>
+
+    <div style="text-align:center; font-size:10px;">
+        <div>Emitido em <span id="pdfHora"></span></div>
+        <strong>Cooperativa CLAF agradece!</strong>
+    </div>
+</div>
 
     <script src="script.js"></script>
    <!-- RECIBO PARA IMPRESSÃO -->
