--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
 </div>
 <!-- CUPOM PARA PDF (INVISÍVEL) -->
 <div id="pdf-cupom" style="
-    position: fixed;
-    left: -9999px;
+    position: absolute;
+    left: 0;
+    visibility: hidden
     top: 0;
     width: 80mm;
     background: white;
