--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
 </div>
 <!-- CUPOM PARA PDF (INVISÍVEL) -->
 <div id="pdf-cupom" style="
-    position: absolute;
-    left: 0;
-    visibility: hidden
+    position: fixed;
+    left: -9999px;
     top: 0;
     width: 80mm;
     background: white;
